<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lMain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center"
        android:padding="5dp" >

        <TextView
            android:id="@+id/tvEarth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ibtnEarth"
            android:layout_alignLeft="@+id/ibtnEarth"
            android:layout_margin="2dp"
            android:text="@string/earth"
            android:textColor="@android:color/white"
            android:textStyle="italic|bold" />

        <ImageButton
            android:id="@+id/ibtnEarth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:contentDescription="@string/earth"
            android:padding="5dp"
            android:src="@drawable/earth_main" />

        <TextView
            android:id="@+id/tvWater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ibtnWater"
            android:layout_alignRight="@+id/ibtnWater"
            android:layout_margin="2dp"
            android:text="@string/water"
            android:textColor="@android:color/white"
            android:textStyle="italic|bold" />

        <ImageButton
            android:id="@+id/ibtnWater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/ibtnEarth"
            android:contentDescription="@string/water"
            android:padding="5dp"
            android:src="@drawable/water_main" />

        <TextView
            android:id="@+id/tvSnow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ibtnSnow"
            android:layout_below="@+id/ibtnSnow"
            android:layout_margin="2dp"
            android:text="@string/snow"
            android:textColor="@android:color/white"
            android:textStyle="italic|bold" />

        <ImageButton
            android:id="@+id/ibtnSnow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ibtnEarth"
            android:layout_margin="5dp"
            android:contentDescription="@string/snow"
            android:padding="5dp"
            android:src="@drawable/snow_main" />

        <TextView
            android:id="@+id/tvAir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/ibtnAir"
            android:layout_below="@+id/ibtnAir"
            android:layout_margin="2dp"
            android:text="@string/air"
            android:textColor="@android:color/white"
            android:textStyle="italic|bold" />

        <ImageButton
            android:id="@+id/ibtnAir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ibtnWater"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/ibtnSnow"
            android:contentDescription="@string/air"
            android:padding="5dp"
            android:src="@drawable/air_main" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/footer"
        style="@android:style/Widget.Holo.Light.Tab"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#808080"
        android:orientation="horizontal"
        android:padding="1dp" >

        <Button
            android:id="@+id/btnPhotoG"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#101010"
            android:text="@string/photo_gallery"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnVideoG"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="#101010"
            android:text="@string/video_gallery"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>